@@ -245,6 +245,47 @@
     (should (null events))
     (lsp-kill-watch watch)))
 
+(ert-deftest lsp-file-watch--invalid-regex-handling ()
+  "Test that invalid regex patterns are handled gracefully (issue #3439)."
+  ;; Clear warning cache for clean test
+  (clrhash lsp--warned-invalid-regexps)
+  ;; Test with valid patterns - should match
+  (should (equal "[/\\\\]\\.git\\'"
+                 (lsp--string-match-any '("[/\\\\]\\.git\\'") "/project/.git")))
+  (should (equal "[/\\\\]__pycache__\\'"
+                 (lsp--string-match-any '("[/\\\\]__pycache__\\'") "/project/__pycache__")))
+  ;; Test with no match
+  (should-not (lsp--string-match-any '("[/\\\\]\\.git\\'") "/project/src"))
+  ;; Test with invalid regex - should return nil and not signal error
+  ;; Use unclosed bracket which is invalid in ALL Emacs versions (28, 29, 30+)
+  (should-not (lsp--string-match-any '("[/\\\\][unclosed") "/project/__pycache__"))
+  ;; Test that valid patterns still work when mixed with invalid ones
+  (should (equal "[/\\\\]\\.git\\'"
+                 (lsp--string-match-any '("[invalid-unclosed"
+                                          "[/\\\\]\\.git\\'")
+                                        "/project/.git")))
+  ;; Edge case: empty list
+  (should-not (lsp--string-match-any '() "/project/.git"))
+  ;; Edge case: empty string to match against
+  (should-not (lsp--string-match-any '("[/\\\\]\\.git\\'") ""))
+  ;; Edge case: all invalid patterns (unclosed brackets - invalid in all versions)
+  (should-not (lsp--string-match-any '("[bad1" "[bad2")
+                                     "/project/.git")))
+
+(ert-deftest lsp-file-watch--invalid-regex-warning-cache ()
+  "Test that invalid regex warnings are only shown once per pattern."
+  ;; Clear warning cache
+  (clrhash lsp--warned-invalid-regexps)
+  ;; First call should cache the invalid pattern
+  ;; Use unclosed bracket which is invalid in ALL Emacs versions
+  (should-not (lsp--string-match-any '("[cached-unclosed") "/test"))
+  (should (gethash "[cached-unclosed" lsp--warned-invalid-regexps))
+  ;; Verify cache prevents repeated warnings (pattern is already cached)
+  (let ((cache-size (hash-table-count lsp--warned-invalid-regexps)))
+    (lsp--string-match-any '("[cached-unclosed") "/test2")
+    ;; Cache size should not increase for same pattern
+    (should (= cache-size (hash-table-count lsp--warned-invalid-regexps)))))
+
 (ert-deftest lsp-file-watch--adding-watches ()
   :tags '(no-win)
   (let* ((temp-directory (make-temp-file "test-dir" t))
